[gd_scene load_steps=3 format=3 uid="uid://b0a21ma7i0fmo"]

[ext_resource type="PackedScene" uid="uid://c6243b85k6e7" path="res://scenes/components/InformationBar.tscn" id="1_e22ec"]
[ext_resource type="Script" path="res://scripts/MainUI/achievement.gd" id="1_mtrnr"]

[node name="Achievement" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.913725, 0.784314, 0.564706, 1)
script = ExtResource("1_mtrnr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="InformationBar" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_e22ec")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 600
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Kembali"

[node name="LabelTotalAchievements" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.403922, 0.301961, 0.145098, 1)
text = "Total pencapaian: "

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 98.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AchievementItem" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LabelContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/AchievementItem"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="LabelName" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/AchievementItem/LabelContainer"]
layout_mode = 2
text = "Label name"

[node name="CheckBoxContainer" type="MarginContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/AchievementItem"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_right = 20

[node name="CheckBox" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/AchievementItem/CheckBoxContainer"]
layout_mode = 2
disabled = true
